--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <title>Animated Login Inputs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap --->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Lottie -->
